k8s/env/intranet/deployment-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  template:
    spec:
      containers:
      - name: website
        image: ghcr.io/o-p-n/website@sha256:032bddfb8d6679cb393ea3deea41cc7c0a1f2dd7a2b0fa9612f3b40ab15a695a
