k8s/env/intranet/route-hostnames-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: website
  namespace: website
spec:
  hostnames:
    - outer-planes.casa
